chore: staged changes

--- a/src/assets/tailwind.pcss
+++ b/src/assets/tailwind.pcss
@@ -9,3 +9,9 @@ html {
 body {
   @apply min-h-full bg-gray-100;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    @apply bg-gray-900;
+  }
+}
